<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="#f7f7f7"
    android:layoutDirection="ltr"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f7f7f7"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#f7f7f7" >

                <LinearLayout
                    android:id="@+id/llCall"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/bg_circle"
                    android:gravity="center|center_horizontal"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/txtCall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        android:text="@string/btnCall"
                        android:textColor="#ffffff" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llSituation"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_below="@+id/llCall"
                    android:layout_marginStart="25dp"
                    android:layout_toEndOf="@+id/llCall"
                    android:background="@drawable/bg_menu"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/txtSituation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btnSituation"
                        android:textColor="#ffffff" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llHistory"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_alignTop="@+id/llSituation"
                    android:layout_marginEnd="24dp"
                    android:layout_toStartOf="@+id/llCall"
                    android:background="@drawable/bg_menu"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/txtHistory"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btnHistory"
                        android:textColor="#ffffff" />
                </LinearLayout>

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>