<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="0.8"
        android:background="@drawable/pic_a" >

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:background="#50ffffff"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:id="@+id/ll_on_device1_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_margin="8dp"
                    android:background="@drawable/bg_on"
                    android:gravity="center" >

                    <ImageView
                        android:id="@+id/ImageView02"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1"
                        android:src="@drawable/circle" />

                    <TextView
                        android:id="@+id/txt_able1_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/strActive"
                        android:textColor="#ffffff" />
                </LinearLayout>

                <TextView
                    android:id="@+id/txt_D1_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="16dp"
                    android:text="@string/txtDeviceOne"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <LinearLayout
                    android:id="@+id/ll_off_device1_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_margin="8dp"
                    android:layout_toRightOf="@+id/ll_on_device1_1"
                    android:background="@drawable/bg_off"
                    android:gravity="center" >

                    <ImageView
                        android:id="@+id/ImageView03"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1"
                        android:src="@drawable/circle" />

                    <TextView
                        android:id="@+id/txt_disable1_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/strUnActive"
                        android:textColor="#ffffff" />
                </LinearLayout>

            </RelativeLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/linearLayout2"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="36dp"
            android:layout_marginLeft="16dp"
            android:src="@drawable/like_logo" />

        <LinearLayout
            android:id="@+id/ll_menu_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/linearLayout2"
            android:layout_alignRight="@+id/eeg_1"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="64dp"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_menu_black_36dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/eeg_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/imageView2"
            android:layout_marginRight="4dp"
            android:text="Electronic Engineering Group"
            android:textAppearance="?android:attr/textAppearanceSmallInverse"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/txt_serial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/eeg_1"
            android:layout_alignRight="@+id/ll_menu_1"
            android:background="@android:color/transparent"
            android:text=" L10 "
            android:textColor="#ffffff" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#d8d9d9" >

        <LinearLayout
            android:id="@+id/ll_on_device2_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="8dp"
            android:background="@drawable/bg_on"
            android:gravity="center" >

            <ImageView
                android:id="@+id/ImageView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:src="@drawable/circle" />

            <TextView
                android:id="@+id/txt_able2_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/strActive"
                android:textColor="#ffffff" />
        </LinearLayout>

        <TextView
            android:id="@+id/txt_D2_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:text="@string/txtDeviceTwo"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:id="@+id/ll_off_device2_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="8dp"
            android:layout_toRightOf="@+id/ll_on_device2_1"
            android:background="@drawable/bg_off"
            android:gravity="center" >

            <ImageView
                android:id="@+id/ImageView04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:src="@drawable/circle" />

            <TextView
                android:id="@+id/txt_disable2_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/strUnActive"
                android:textColor="#ffffff" />
        </LinearLayout>

    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:background="#ffffff" >

                <LinearLayout
                    android:id="@+id/ll_call_1"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/bg_circle"
                    android:gravity="center|center_horizontal"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/txt_call_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        android:text="@string/Call"
                        android:textColor="#ffffff" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_vaziat_1"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_below="@+id/ll_call_1"
                    android:layout_marginLeft="25dp"
                    android:layout_toRightOf="@+id/ll_call_1"
                    android:background="@drawable/bg_menu"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/txt_vaz_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txtSituation"
                        android:textColor="#ffffff" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_history_1"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_alignTop="@+id/ll_vaziat_1"
                    android:layout_marginRight="24dp"
                    android:layout_toLeftOf="@+id/ll_call_1"
                    android:background="@drawable/bg_menu"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/txt_history_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btnHistory"
                        android:textColor="#ffffff" />
                </LinearLayout>

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
