<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layoutDirection="ltr"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#50ffffff">

        <TextView
            android:id="@+id/txtFunctionOneDTwo"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/txtDeviceTwo"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <LinearLayout
            android:layout_alignParentStart="true"
            android:id="@+id/llActiveFunctionOneDTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="8dp"
            android:background="@drawable/bg_on"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:src="@drawable/ic_check_circle_white_18dp" />

            <TextView
                android:id="@+id/txtButtonOnDTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/strActive"
                android:textColor="#ffffff" />
        </LinearLayout>

        <LinearLayout
            android:layout_toEndOf="@+id/llActiveFunctionOneDTwo"
            android:id="@+id/llUnActiveFunctionOneDTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="8dp"
            android:background="@drawable/bg_off"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:src="@drawable/ic_check_circle_white_18dp" />

            <TextView
                android:id="@+id/txtButtonOffDTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/strUnActive"
                android:textColor="#ffffff" />
        </LinearLayout>

    </RelativeLayout>
    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/rlFunctionTree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#50ffffff">

        <TextView
            android:id="@+id/txtFunctionOneDTree"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/txtDeviceTwo"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <LinearLayout
            android:layout_alignParentStart="true"
            android:id="@+id/llActiveFunctionOneDTree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="8dp"
            android:background="@drawable/bg_on"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:src="@drawable/ic_check_circle_white_18dp" />

            <TextView
                android:id="@+id/txtButtonOnDTree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/strActive"
                android:textColor="#ffffff" />
        </LinearLayout>

        <LinearLayout
            android:layout_toEndOf="@+id/llActiveFunctionOneDTree"
            android:id="@+id/llUnActiveFunctionOneDTree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="8dp"
            android:background="@drawable/bg_off"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:src="@drawable/ic_check_circle_white_18dp" />

            <TextView
                android:id="@+id/txtButtonOffDTree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/strUnActive"
                android:textColor="#ffffff" />
        </LinearLayout>

    </RelativeLayout>
</LinearLayout>